--- a/assets/sass/layouts/_morphologie.scss
+++ b/assets/sass/layouts/_morphologie.scss
@@ -24,12 +24,9 @@
          }
 
          label {
+            @include paragraph(16px, $dark, 700);
             font-style: italic;
-            font-weight: 700;
-            font-size: 16px;
-            line-height: 24px;
             text-transform: uppercase;
-            color: $dark;
          }
       }
 
@@ -38,6 +35,7 @@
 
          label {
             visibility: hidden;
+            margin-bottom: 0;
          }
       }
 
@@ -51,10 +49,7 @@
          }
 
          p {
-            font-weight: 700;
-            font-size: 14px;
-            line-height: 20px;
-            color: #007DBC;
+            @include paragraph(14px, $blue, 700);
          }
       }
    }
@@ -87,51 +82,127 @@
          align-content: flex-end;
       }
 
-      .fa-xmark {
+      .btnClose {
          position: absolute;
          right: 40px;
-         top: 48px;
-         color: #00689D;
+         top: 33px;
+         color: $blue;
          cursor: pointer;
       }
 
-      :last-child {
-         font-weight: 400;
-         font-size: 16px;
-         line-height: 24px;
-      }
-
       p {
-         font-weight: 400;
-         font-size: 14px;
-         line-height: 24px;
-         color: $grey;
+         @include paragraph(14px, $grey, 400);
          margin-bottom: 0.5rem;
       }
 
       h3 {
-         width: 80%;
+         @include paragraph(24px, $dark, 700);
+         width: 90%;
          font-style: italic;
-         font-weight: 700;
-         font-size: 24px;
-         line-height: 28px;
          text-transform: uppercase;
-         color: $dark;
          margin-bottom: 2rem;
       }
 
       h4 {
-         font-weight: 700;
-         font-size: 20px;
-         line-height: 28px;
-         color: $dark-grey;
-         margin-bottom: 0.4rem;
+         @include paragraph(20px, $dark-grey, 700);
+         margin-bottom: 0.7rem;
       }
 
       .modal--context {
          display: flex;
          flex-direction: column;
          margin-bottom: 2rem;
+
+         .material-icons {
+            margin-right: 0.5rem;
+         }
+
+         hr {
+            border: 1px solid #EFF1F3;
+            width: 80%;
+            margin: 1.5rem auto;
+         }
+
+         img {
+            margin-left: auto;
+            margin-right: auto;
+            width: 300px;
+            height: 300px;
+            border-radius: 24px;
+            margin-bottom: 1.625rem;
+         }
+      }
+   }
+}
+
+
+#pratique--modal {
+   width: auto;
+   height: auto;
+   display: none;
+   justify-content: center;
+   align-items: center;
+   position: absolute;
+   top: 0;
+   left: 0;
+   z-index: 9999;
+
+   .modal--menu {
+      width: auto;
+      background-color: $white;
+      padding: 2rem 2rem 8rem 2rem;
+
+      .block {
+         position: fixed;
+         bottom: 0;
+         left: 0;
+         width: 100%;
+         height: 10rem;
+         background: linear-gradient(180deg, rgba(255, 255, 255, 0) -60.25%, #FFFFFF 90.48%);
+         padding: 0 2rem 2rem 2rem;
+         align-content: flex-end;
+      }
+
+      .btnClose {
+         position: absolute;
+         right: 40px;
+         top: 33px;
+         color: $blue;
+         cursor: pointer;
+      }
+
+      p {
+         @include paragraph(14px, $grey, 400);
+         margin-bottom: 0.5rem;
+      }
+
+      h3 {
+         @include paragraph(24px, $dark, 700);
+         width: 90%;
+         font-style: italic;
+         text-transform: uppercase;
+         margin-bottom: 2rem;
+      }
+
+      h4 {
+         @include paragraph(20px, $dark-grey, 700);
+         margin-bottom: 0.7rem;
+      }
+
+      .modal--context {
+         display: flex;
+         flex-direction: column;
+         margin-bottom: 2rem;
+
+         .material-icons {
+            margin-right: 0.5rem;
+         }
+
+         hr {
+            border: 1px solid #EFF1F3;
+            width: 80%;
+            margin: 1.5rem auto;
+         }
 
          img {
             margin-left: auto;
