--- a/assets/sass/layouts/_pratique.scss
+++ b/assets/sass/layouts/_pratique.scss
@@ -6,12 +6,9 @@
    }
 
    label {
+      @include paragraph(16px, $dark, 700);
       font-style: italic;
-      font-weight: 700;
-      font-size: 16px;
-      line-height: 24px;
       text-transform: uppercase;
-      color: $dark;
    }
 }
 
@@ -25,12 +22,9 @@
       align-items: center;
 
       h4 {
+         @include paragraph(16px, $dark, 700);
          font-style: italic;
-         font-weight: 700;
-         font-size: 16px;
-         line-height: 24px;
          text-transform: uppercase;
-         color: $dark;
          width: auto;
       }
 
@@ -42,10 +36,7 @@
          }
 
          p {
-            font-weight: 700;
-            font-size: 14px;
-            line-height: 20px;
-            color: #007DBC;
+            @include paragraph(14px, $blue, 700);
          }
       }
    }
@@ -56,7 +47,7 @@
       align-items: center;
       background-color: $white;
       padding: 0.5rem;
-      margin-top: 0.25rem;
+      margin-top: 0.5rem;
       border-radius: 4px;
       border: 1px solid $grey;
 
@@ -66,19 +57,13 @@
       }
 
       h4 {
-         font-weight: 700;
-         font-size: 16px;
-         line-height: 20px;
-         color: $dark;
+         @include paragraph(16px, $dark, 700);
          margin-bottom: 0.3rem;
       }
 
       p {
+         @include paragraph(14px, $grey, 400);
          width: 90%;
-         font-weight: 400;
-         font-size: 14px;
-         line-height: 20px;
-         color: $grey;
       }
 
       img {
