--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -61,6 +61,9 @@
 .morphologie--form .morphologie--content .label {
   width: 100%;
 }
+.morphologie--form .morphologie--content .label::before {
+  inset-block-start: 2.3rem;
+}
 .morphologie--form .morphologie--content .label label {
   visibility: hidden;
   margin-bottom: 0;
@@ -69,9 +72,16 @@
   position: absolute;
   right: 0;
   display: flex;
+  align-items: center;
+  margin-top: 0;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 20px;
+  color: #007DBC;
 }
-.morphologie--form .morphologie--content a img {
-  margin-right: 0.3rem;
+.morphologie--form .morphologie--content a .material-symbols-outlined {
+  margin-right: 0.2rem;
+  font-size: 18px;
 }
 .morphologie--form .morphologie--content a p {
   font-weight: 700;
@@ -270,9 +280,16 @@
 }
 .card--container .card--desc a {
   display: flex;
+  align-items: center;
+  margin-top: 0;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 20px;
+  color: #007DBC;
 }
-.card--container .card--desc a img {
-  margin-right: 0.3rem;
+.card--container .card--desc a .material-symbols-outlined {
+  margin-right: 0.2rem;
+  font-size: 18px;
 }
 .card--container .card--desc a p {
   font-weight: 700;
@@ -362,17 +379,22 @@
 }
 .resultat--block .vtmn-card .vtmn-card_content a {
   display: flex;
+  align-items: center;
   margin-top: 0;
-}
-.resultat--block .vtmn-card .vtmn-card_content a p {
-  font-weight: 400;
+  font-weight: 700;
   font-size: 14px;
   line-height: 20px;
   color: #007DBC;
 }
-.resultat--block .vtmn-card .vtmn-card_content a img {
-  margin-right: 0.5rem;
-  width: 16px;
+.resultat--block .vtmn-card .vtmn-card_content a p {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 20px;
+  color: #007DBC;
+}
+.resultat--block .vtmn-card .vtmn-card_content a .material-symbols-outlined {
+  margin-right: 0.2rem;
+  font-size: 18px;
 }
 .resultat--block .vtmn-card .vtmn-card_content p {
   font-weight: 400;
@@ -382,6 +404,8 @@
   margin-top: 0;
 }
 .resultat--block .vtmn-card img {
+  margin-left: auto;
+  margin-right: auto;
   aspect-ratio: 0;
 }
 
@@ -493,6 +517,7 @@ body {
   display: none;
 }
 #navigation #navigation--content .navigation--box .navigation--box__circle {
+  cursor: not-allowed;
   font-weight: 700;
   font-size: 16px;
   color: #007DBC;
@@ -595,6 +620,7 @@ body {
   display: none;
 }
 #navigation-resultat #navigation--content .navigation--box .navigation--box__circle {
+  cursor: not-allowed;
   font-weight: 700;
   font-size: 16px;
   color: #007DBC;
@@ -616,6 +642,10 @@ body {
   line-height: 20px;
   margin-top: 1rem;
   color: #687787;
+}
+
+.hide-small {
+  display: none;
 }
 
 #footer {
@@ -717,7 +747,7 @@ body {
   justify-content: flex-end;
   align-items: center;
   flex-direction: column;
-  padding: 0 2rem 2rem 2rem;
+  padding: 0 2.8rem 2rem 2.8rem;
 }
 #footer--resultat a {
   color: #687787;
@@ -768,7 +798,12 @@ body {
   background-color: white;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 370px) {
+  .hide-small {
+    display: contents;
+  }
+}
+@media (min-width: 768px) {
   main {
     display: flex;
     align-content: center;
@@ -851,7 +886,7 @@ body {
   }
   .morphologie--form {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     grid-column-gap: 2rem;
     padding-bottom: 0;
   }
@@ -1016,16 +1051,10 @@ body {
     width: 30%;
   }
   .card--container {
-    width: 28rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1.5rem;
   }
   .resume--block {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    align-content: center;
-    column-gap: 2rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 2rem;
   }
   .resume--block .resume--desc {
     padding: 1.5rem 0;
@@ -1064,5 +1093,26 @@ body {
     margin-top: 2.5rem;
     margin-bottom: 2rem;
     width: 60%;
+  }
+}
+@media (min-width: 1124px) {
+  .morphologie--form {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 2rem;
+    padding-bottom: 0;
+  }
+  .card--container {
+    width: 70%;
+    margin-bottom: 0.5rem;
+  }
+  .resume--block {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    column-gap: 2rem;
+    margin-bottom: 0.5rem;
+    flex-direction: row;
   }
 }
