--- a/assets/sass/layouts/_morphologie.scss
+++ b/assets/sass/layouts/_morphologie.scss
@@ -33,6 +33,10 @@
       .label {
          width: 100%;
 
+         &::before {
+            inset-block-start: 2.3rem;
+         }
+
          label {
             visibility: hidden;
             margin-bottom: 0;
@@ -43,9 +47,13 @@
          position: absolute;
          right: 0;
          display: flex;
+         align-items: center;
+         margin-top: 0;
+         @include paragraph(14px, $blue, 700);
 
-         img {
-            margin-right: 0.3rem;
+         .material-symbols-outlined {
+            margin-right: 0.2rem;
+            font-size: 18px;
          }
 
          p {
