--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -7,8 +7,15 @@
 @use 'layouts/navigation';
 @use 'layouts/footer';
 
+// Small devices (small phones, 370px and up)
+@media (min-width: 370px) {
+   .hide-small {
+      display: contents;
+   }
+}
+
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
+@media (min-width: 768px) {
 
    // First page : Accueil
    main {
@@ -75,7 +82,7 @@
 
    .morphologie--form {
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(1, 1fr);
       grid-column-gap: 2rem;
       padding-bottom: 0;
    }
@@ -250,17 +257,11 @@
    }
 
    .card--container {
-      width: 28rem;
-      margin-bottom: .5rem;
+      margin-bottom: 1.5rem;
    }
 
    .resume--block {
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      align-content: center;
-      column-gap: 2rem;
-      margin-bottom: .5rem;
+      margin-bottom: 2rem;
 
       .resume--desc {
          padding: 1.5rem 0;
@@ -314,4 +315,29 @@
          width: 60%;
       }
    }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 1124px) {
+   .morphologie--form {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-column-gap: 2rem;
+      padding-bottom: 0;
+   } 
+
+   .card--container {
+      width: 70%;
+      margin-bottom: .5rem;
+   }
+
+   .resume--block {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      align-content: center;
+      column-gap: 2rem;
+      margin-bottom: 0.5rem;
+      flex-direction: row;
+   } 
 }
