--- a/assets/sass/utils/_mixins.scss
+++ b/assets/sass/utils/_mixins.scss
@@ -7,6 +7,7 @@
 
 @mixin navigation-circles($color, $bg) {
    // Font parameters
+   cursor: not-allowed;
    font-weight: 700;
    font-size: 16px;
    color: $color;
