--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -125,7 +125,7 @@
       width: 55%;
       height: auto;
       z-index: 5;
-      background-image: url("./images/image.svg");
+      background-image: url("../images/image.svg");
       background-position: top;
       background-repeat: no-repeat;
       background-size: cover;
@@ -137,7 +137,7 @@
       width: 55%;
       height: auto;
       z-index: 5;
-      background-image: url("./images/morphologie.svg");
+      background-image: url("../images/morphologie.svg");
       background-position: top;
       background-repeat: no-repeat;
       background-size: cover;
@@ -149,7 +149,7 @@
       width: 55%;
       height: auto;
       z-index: 5;
-      background-image: url("./images/pratique.svg");
+      background-image: url("../images/pratique.svg");
       background-position: top;
       background-repeat: no-repeat;
       background-size: cover;
@@ -161,7 +161,7 @@
       width: 55%;
       height: auto;
       z-index: 5;
-      background-image: url("./images/resume.svg");
+      background-image: url("../images/resume.svg");
       background-position: top;
       background-repeat: no-repeat;
       background-size: cover;
@@ -176,7 +176,7 @@
       width: 100vw;
       height: 100vh;
       z-index: -9999;
-      background-image: url("./images/resultat.svg");
+      background-image: url("../images/resultat.svg");
       background-position: top;
       background-repeat: no-repeat;
       background-size: cover;
