--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -941,7 +941,7 @@ body {
     width: 55%;
     height: auto;
     z-index: 5;
-    background-image: url("images/image.svg");
+    background-image: url("../images/image.svg");
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
@@ -951,7 +951,7 @@ body {
     width: 55%;
     height: auto;
     z-index: 5;
-    background-image: url("images/morphologie.svg");
+    background-image: url("../images/morphologie.svg");
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
@@ -961,7 +961,7 @@ body {
     width: 55%;
     height: auto;
     z-index: 5;
-    background-image: url("images/pratique.svg");
+    background-image: url("../images/pratique.svg");
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
@@ -971,7 +971,7 @@ body {
     width: 55%;
     height: auto;
     z-index: 5;
-    background-image: url("images/resume.svg");
+    background-image: url("../images/resume.svg");
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
@@ -984,7 +984,7 @@ body {
     width: 100vw;
     height: 100vh;
     z-index: -9999;
-    background-image: url("images/resultat.svg");
+    background-image: url("../images/resultat.svg");
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
